Recovery init.rc setenforce 0 to make SELinux permissive
This will only work if the sepolicy is changed by also applying:
https://gerrit.omnirom.org/10924
Otherwise the sepolicy will deny the request.

Change-Id: I8a52cdfdd38bda19aa89686ff0ad31b90e1aa3b7

--- a/etc/init.rc
+++ b/etc/init.rc
@@ -11,6 +11,10 @@ on early-init
     start ueventd
     start healthd
 
+service set_permissive /sbin/toolbox setenforce 0
+    oneshot
+    seclabel u:r:recovery:s0
+
 on init
     export PATH /sbin:/system/bin
     export LD_LIBRARY_PATH .:/sbin
